--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
-node_modules/
-.expo/
+.idea/
+.DS_Store
+__pycache__/
+.eslintcache
+
+# RN
+app/node_modules/
+app/.expo/
+app/.expo-shared/
+app/.tmp/
 npm-debug.*
+web-build/
+
+# django
+backend/venv/
+backend/.env
+backend/static/
+
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
-
-# macOS
-.DS_Store
