--- a/backend/docker/nginx/nginx.conf
+++ b/backend/docker/nginx/nginx.conf
@@ -1,23 +1,65 @@
-# proxy_pass 지시자를 통해 nginx가 받은 요청을 넘겨줄 서버를 정의
+# user  nginx;
+# worker_processes  1;
 
-upstream django {
-  # 클라이언트 IP를 hash 후 특정 클라이언트는 특정 서버로 연결
-  ip_hash;
-  server django:8000;
+# error_log  /var/log/nginx/error.log warn;
+# pid        /var/run/nginx.pid;
+
+# events {                     
+#     worker_connections  1024;
+# }
+
+# http {
+#     include       /etc/nginx/mime.types;
+#     default_type  application/octet-stream;
+
+#     upstream django {
+#         server django:8000;
+#     }
+
+#     server {
+#         listen 80;
+#         server_name localhost;
+#         root /code;
+
+#         location / {
+#             proxy_pass         http://django;
+#             proxy_redirect     off;
+#             proxy_set_header   Host $host;
+#             proxy_set_header   X-Real-IP $remote_addr;
+#             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;          
+#         }
+#         location /static {
+#             alias /code/static;
+#         }
+#     }
+
+#     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+#                       '$status $body_bytes_sent "$http_referer" '
+#                       '"$http_user_agent" "$http_x_forwarded_for"';
+
+#     access_log  /var/log/nginx/access.log  main;
+                                                
+#     sendfile        on;                                                                         
+#     keepalive_timeout  65;                                                                      
+#     include /etc/nginx/conf.d/*.conf;           
+# }
+
+upstream web {
+    server django:8000;
 }
 
 server {
-  # static 파일을 제공해야할 경우
-  location /static/ {
-    alias /code/static;
-  }
 
-  # 프록시 설정, nginx 뒤에 WAS가 있을 경우  
-  location / {
-    proxy_pass http://django/;
-  }
+    listen 80;
 
-  # 포트 설정
-  listen 80;
-  server_name localhost;
+    location / {
+        proxy_pass http://web;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+    location /static/ {
+        alias /code/static/;
+    }
+
 }
