--- a/backend/docker/django/Dockerfile
+++ b/backend/docker/django/Dockerfile
@@ -1,8 +1,13 @@
 # python image
 FROM python:3.8
 
-# ARG ENV
-# ENV ENV ${ENV}
+# TIME ZONE 설정 추가
+ENV TZ="Asia/Seoul"
+
+# 리눅스 관련된 내용 업데이트
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y wget httpie vim\
+    && rm -rf /var/lib/apt/lists/*
 
 # Directory in container for all project
 ENV DJANGO_SRC /code
@@ -18,3 +23,7 @@ ADD ./ $DJANGO_SRC/
 VOLUME $DJANGO_SRC/static/
 
 WORKDIR $DJANGO_SRC
+
+EXPOSE 8000
+
+ENTRYPOINT [ "sh", "./docker/django/entry.sh" ]
