--- a/backend/docker/nginx/Dockerfile
+++ b/backend/docker/nginx/Dockerfile
@@ -1,4 +1,11 @@
 FROM nginx:alpine
 
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d
+# timezone 설정
+RUN apk add tzdata \
+    && cp /usr/share/zoneinfo/Asia/Seoul /etc/localtime \
+    && echo "Asia/Seoul" > /etc/timezone \
+    && apk del tzdata
+
+RUN rm -r /etc/nginx/conf.d
+COPY docker/nginx/nginx.conf /etc/nginx/conf.d
+EXPOSE 80
