--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,23 @@
 asgiref==3.4.1
 bcrypt==3.2.0
+boto3==1.18.20
+botocore==1.21.20
 cffi==1.14.6
 cryptography==3.4.7
 Django==3.2.6
 Fabric3==1.14.post1
 gunicorn==20.1.0
 invoke==1.6.0
+jmespath==0.10.0
 mysqlclient==2.0.3
 paramiko==2.7.2
 pathlib2==2.3.6
 pycparser==2.20
 PyNaCl==1.4.0
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 pytz==2021.1
+s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.6
