--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,19 +5,26 @@ services:
       context: .
       dockerfile: ./docker/django/Dockerfile
     platform: linux/amd64
-    command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+    # command: gunicorn backend.wsgi:application --bind 0.0.0.0:8000
+    command: > 
+      bash -c "python3 manage.py makemigrations
+      && python3 manage.py migrate   
+      && python3 manage.py collectstatic --noinput
+      && gunicorn backend.wsgi:application -b 0.0.0.0:8000 "
     volumes:
       - .:/code
     expose:
       - "8000"
     restart: "on-failure"
   nginx:
-    build: ./docker/nginx
+    # build: ./docker/nginx
+    image: nginx:latest
     platform: linux/amd64
     ports:
       - "80:80"
     volumes:
       - .:/code
+      - ./docker/nginx:/etc/nginx/conf.d
     depends_on:
       - django
     restart: "on-failure"
