--- a/backend/docker/nginx/Dockerfile
+++ b/backend/docker/nginx/Dockerfile
@@ -7,5 +7,5 @@ RUN apk add tzdata \
     && apk del tzdata
 
 RUN rm -r /etc/nginx/conf.d
-COPY docker/nginx/nginx.conf /etc/nginx/conf.d
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
